# oTree_instruction_program

./: README.md  pyproject.toml
tutorial/dictator-game/: settings.py
tutorial/dictator-game/dictator/: Introduction.html  Offer.html  Results.html  __init__.py  models.py  pages.py
